--- a/client/main.scss
+++ b/client/main.scss
@@ -1,3 +1,20 @@
 // temporary imports
 
 @import '{}/node_modules/crodity-react/lib/scss/_buttons.scss';
+
+body{
+  margin: 0;
+}
+
+.crd-login-scene{
+  background-image: url('/imgs/crodity-back.jpg');
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.crd-login-scene-social{
+  margin: 0 auto;
+}
