--- a/client/main.scss
+++ b/client/main.scss
@@ -13,8 +13,30 @@ body{
   display: flex;
   align-items: center;
   text-align: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.crd-login-scene-social{
-  margin: 0 auto;
+.crd-login-social{
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.crd-btn-login{
+
+  margin-left: 15px;
+  margin-bottom: 15px;
+  min-width: 250px !important;
+
+  button{
+    box-shadow: 2px 2px 40px 5px rgba(255, 255, 255, 1);
+  }
+
+  @media screen and (max-width: 800px){ 
+    min-width: 280px !important;
+    button {
+     box-shadow: 2px 2px 40px 5px rgba(255, 255, 255, .5);
+    }
+  }
+  
 }
